--- a/quicklook.html
+++ b/quicklook.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>AR Library</title>
 </head>
 <body>
     <h1>Welcome to the AR Library</h1>
-    <p>Welcome to the AR Library website. I created this website in order to view AR objects from the web on any device running iOS 12. Conincidentally, this is the first time I made a website with HTML! It's a lot of fun! </p>
+    <p>Welcome to the AR Library website.</p>
+    <p>苹果系统浏览器 Safari 打开，系统要求 iOS 12 及以上.</p>
+    <p>用的 GitHub Pages，好像开 VPN 加载会快一点.</p>
 
     <a href="./img/planet_Earth260.usdz" rel="ar">
     	<img src="./img/egg.png" width=200>
